# DSRA-Deep_Scientific_Research_Agent

./: .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT_INSTRUCTIONS.md  PROJECT_STATE.md  README.md  TODO.md  docker-compose.yml  test_serialize.py
backend/: .env.development  .env.example  .env.production  .env.staging  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  critic.py  evidence.py  export.py  gap_analysis.py  planner.py  researcher.py  verification.py  visualization.py  writer.py
backend/app/api/: dependencies.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  events.py  logging.py  orchestrator.py  rate_limit.py  security.py  state.py  workflow.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  agent_log.py  claim.py  report.py  research_query.py  research_session.py  source.py  user.py
backend/app/db/repositories/: __init__.py  base.py  claim.py  report.py  research_session.py  source.py  user.py
backend/app/exceptions/: base.py  handlers.py
backend/app/llm/: gateway.py
backend/app/llm/prompts/: base.py  critic.py  evidence.py  gap_analysis.py  planner.py  verification.py  visualization.py  writer.py
backend/app/retrievers/: __init__.py  arxiv.py  base.py  google_cse.py  pubmed.py  semantic_scholar.py  wikipedia.py
backend/app/schemas/: __init__.py  common.py
backend/app/schemas/agents/: __init__.py  all_agents.py  planner.py
backend/app/schemas/api/: __init__.py  auth.py  claims.py  reports.py  research.py
backend/migrations/: env.py
backend/migrations/versions/: 6faf9c3a868b_add_visualization_to_reports.py  7a0f7f1f9c21_add_visualization_column_to_reports.py
backend/tests/: conftest.py  load_test.py  profile_orchestrator.py
backend/tests/integration/: test_workflow.py
backend/tests/unit/: test_llm_gateway.py
(+31 files in other folders)
