[tool.poetry]
name = "dsra-v2"
version = "2.0.0"
description = "DSRA V2 — Deep Scientific Research Agent Platform"
authors = ["Akash <aakashyaduwanshi0470@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.20"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"

# Validation & settings
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"

# LLM
openai = "^1.58.0"
tiktoken = "^0.8.0"

# Async HTTP
aiohttp = "^3.11.10"
httpx = "^0.28.1"

# Research sources
feedparser = "^6.0.11"

# Vector database
chromadb = "^0.6.3"

# Retry logic
tenacity = "^9.0.0"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Rate limiting
slowapi = "^0.1.9"

# Logging
structlog = "^24.4.0"

# PDF generation
reportlab = "^4.2.5"
Pillow = "^11.0.0"

# Markdown + HTML
markdown = "^3.7"
jinja2 = "^3.1.4"

# Utilities
python-dotenv = "^1.0.1"
orjson = "^3.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
ruff = "^0.8.4"
mypy = "^1.13.0"
factory-boy = "^3.3.1"
faker = "^33.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
